--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
+    "react-router-dom": "^6.23.1",
     "styled-components": "^6.1.11",
     "stylelint": "^16.5.0",
     "stylelint-config-recess-order": "^5.0.1",
