--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.51.4",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
@@ -73,7 +74,7 @@
     "msw": "^2.0.12",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.1.1",
-    "storybook": "^7.6.7",
+    "storybook": "^6.5.16",
     "typescript": "^5.2.2",
     "vite": "^5.2.11",
     "vite-tsconfig-paths": "^4.2.3",
